# origin

./: .gitignore
ConsoleRacingSimulator/application/: application.cpp  application.vcxproj
NetologyAlgoritmic/Breadth-first_traversal/: Breadth-first_traversal.cpp  Breadth-first_traversal.sln  Breadth-first_traversal.vcxproj  Breadth-first_traversal.vcxproj.filters
NetologyAlgoritmic/HashFunction/: HashFunction.cpp  HashFunction.sln  HashFunction.vcxproj  HashFunction.vcxproj.filters
NetologyAlgoritmic/NaiveHashfunction/: NaiveHashfunction.cpp  NaiveHashfunction.sln  NaiveHashfunction.vcxproj  NaiveHashfunction.vcxproj.filters
NetologyAlgoritmic/NetologyAlgoritmicDiff/: README.md
NetologyAlgoritmic/PyramidNavigator/: PyramidNavigator.cpp  PyramidNavigator.sln  PyramidNavigator.vcxproj  PyramidNavigator.vcxproj.filters
NetologyAlgoritmic/PyramidPrinter/: PyramidPrinter.cpp  PyramidPrinter.sln  PyramidPrinter.vcxproj  PyramidPrinter.vcxproj.filters
NetologyAlgoritmic/RabinKarpAlgoritm/: RabinKarpAlgoritm.cpp  RabinKarpAlgoritm.sln  RabinKarpAlgoritm.vcxproj  RabinKarpAlgoritm.vcxproj.filters
NetologyAlgoritmic/depth_first_traversal/: depth_first_traversal.cpp  depth_first_traversal.sln  depth_first_traversal.vcxproj  depth_first_traversal.vcxproj.filters
NetologyAsync/Docker_hello/: Docker_hello.cpp  (+3 more)
NetologyCMake/figuresCMake/: CMakeLists.txt  Quadrangle.cpp  Rectangle.h  RightTriangle.h  Triangle.cpp  Triangle.h
PostgreSQL/PGSQL_Reg/: CMakeLists.txt  CMakePresets.json  main.cpp
RacingSimulator/: RacingSimulator.sln
raceSimDraft/: README.md
(+340 files in other folders)
